Fixed spacing

--- a/public/Styles/main.css
+++ b/public/Styles/main.css
@@ -15,7 +15,7 @@ body {
 hr {
     border: 3px dashed orange;
     width: 75%;
-    margin: 0 auto;
+    margin: 1rem auto;
     border-radius: 5px;
     box-shadow: 2px 2px 4px skyblue;
 }
@@ -25,6 +25,7 @@ hr {
 #pageContainer {
     width: 80%;
     background-color: #000000c2;
+    padding-bottom: 0.5rem;
 }
 
 #pageHeader h1 {
